# StelumPy

./: .gitignore  .pre-commit-config.yaml  README.txt  __init__.py  _logging.py  cli.py  exceptions.py  imports.py  pyproject.toml
.github/workflows/: ci.yml
StelumPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
analysis/: __init__.py  edgedetector.py  matching.py
docs/: EXAMPLES.md  README.md  find_best_model.md
io/: __init__.py  model.py  sequence.py
plotting/: __init__.py  interactive.py  plots.py
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_edgedetector.py  test_interactive.py  test_matching.py  test_model.py  test_plots.py  test_sequence.py
